Change log for zeit.web
=======================

3.6 (unreleased)
----------------

- ZON-3263: Show duplicate images on Buzzboard with opacity

- Rename ``acquisition`` to ``access``.


3.5 (2016-09-13)
----------------

- BUG-528: Remove teaser image title attribute

- BUG-529: Fix topic teaser mobile image resource

- ZON-2548: Assimilate ZEITmagazin comments

- BUG-531: Send CORS header on xml.zeit.de, render meta files

- ZON-3181: Make query for author pages configurable

- FIX: Update Partnerbox "Reisen" to new image API

- FIX: Handle non-ascii image uniqueIds


3.4.1 (2016-09-12)
------------------

- HOTFIX: Handle non-ascii image uniqueIds


3.4 (2016-09-07)
----------------

- ZON-3120: Add LazyProxy support for TMS auto areas

- FIX: Don't try to create vivi-thumbnails for gallery entries


3.3 (2016-09-05)
----------------

- ZON-2949: Update clicktracking for pagination

- ZON-2410: Show byline on video-related items

- ZON-2375: Show still image copyright on video-related items

- FIX: Clearly specify where to use a fallback image


3.2 (2016-09-02)
----------------

- HOTFIX: Avoid XMLReference updating triggered by synthesized gallery blocks

- BUG-517: Allow Adtile7 to be wide on ZMO

- FIX: Fix infographics


3.1 (2016-08-31)
----------------

- BUG-514: Fix font size for infobox content blocks

- BUG-511: Right align user menu

- BUG-333: Fix storystream text-overflow character color

- BUG-466: Add Video slugs to comment URLs (prevents superfluous redirects)

- ZON-3241: Add zplus badges to CP teasers

- ZON-3276: Add Z+ parquet region

- ZON-3258: Make customer ID available for webtrekk inside wrapper app

- FIX: Restore ratio for mobile infographics (lost in the 3.0 image merge)


3.0 (2016-08-29)
----------------

- FIX: ZMO infographic

- BUG-508: Hide advertorial links in 1st level navigation without flexbox

- ZON-1586: Overhaul image handling, remove bitblt

- ZON-3262: Add dossier teaser


2.100.2 (2016-08-25)
--------------------
