@@ -16,4 +16,6 @@
       provides="zeit.cms.interfaces.ICMSContent"
       />
 
+    <adapter factory=".view_gallery.persistent_thumbnail_factory" />
+
 </configure>
